# qt_cmake_demo

./: CMakeLists.txt  CMakeLists.txt.QT6  README.md  main.cpp  mainwindow.cpp  mainwindow.h
